Source/WebGPU/WGSL/tests/invalid/reordering-cycle-self-struct.wgsl
// RUN: %not %wgslc | %check

// CHECK-L: encountered a dependency cycle: S -> S
struct S {
    s: S
}
